--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
                         </div>
                     </div>
                 </a>
+                <!-- Postingan 1 -->
+                <a href="postingan/post-atomic-habits.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="sains-populer">
+                    <img src="images/dna-representation-concept.jpg" alt="Ilustrasi konsep DNA" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <span class="text-sm text-blue-600 font-semibold">Sains Populer</span>
+                        <h3 class="text-xl font-bold mt-2 mb-3 text-gray-900">Membedah Konsep DNA dengan Sederhana</h3>
+                        <p class="text-gray-800 mb-4">Mari kita pahami dasar-dasar dari DNA, molekul yang menyimpan semua informasi genetik kita, dengan cara yang mudah.</p>
+                        <div class="flex items-center text-sm text-gray-600">
+                            <i data-feather="calendar" class="w-4 h-4 mr-2"></i>
+                            <span>29 Juli 2025</span>
+                        </div>
+                    </div>
+                </a>
                 
                 <!-- Postingan 2 -->
                 <a href="postingan/post-atomic-habits.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="review-buku">
