--- a/index.html
+++ b/index.html
@@ -67,70 +67,19 @@
             <div id="posts-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                 <!-- Postingan 1 -->
-                <a href="postingan/post-atomic-habits.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="sains-populer">
-                    <img src="images/dna-representation-concept.jpg" alt="Ilustrasi konsep DNA" class="w-full h-48 object-cover">
+                <a href="postingan/pengenalan-dna-barcoding.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="membahas-artikel-ilmiah">
+                    <img src="images/sampul-dna-barcoding.png" alt="Ilustrasi konsep DNA" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <span class="text-sm text-blue-600 font-semibold">Sains Populer</span>
-                        <h3 class="text-xl font-bold mt-2 mb-3 text-gray-900">Membedah Konsep DNA dengan Sederhana</h3>
-                        <p class="text-gray-800 mb-4">Mari kita pahami dasar-dasar dari DNA, molekul yang menyimpan semua informasi genetik kita, dengan cara yang mudah.</p>
-                        <div class="flex items-center text-sm text-gray-600">
-                            <i data-feather="calendar" class="w-4 h-4 mr-2"></i>
-                            <span>29 Juli 2025</span>
-                        </div>
-                    </div>
-                </a>
-                <!-- Postingan 1 -->
-                <a href="postingan/post-atomic-habits.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="sains-populer">
-                    <img src="images/dna-representation-concept.jpg" alt="Ilustrasi konsep DNA" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <span class="text-sm text-blue-600 font-semibold">Sains Populer</span>
-                        <h3 class="text-xl font-bold mt-2 mb-3 text-gray-900">Membedah Konsep DNA dengan Sederhana</h3>
-                        <p class="text-gray-800 mb-4">Mari kita pahami dasar-dasar dari DNA, molekul yang menyimpan semua informasi genetik kita, dengan cara yang mudah.</p>
-                        <div class="flex items-center text-sm text-gray-600">
-                            <i data-feather="calendar" class="w-4 h-4 mr-2"></i>
-                            <span>29 Juli 2025</span>
-                        </div>
-                    </div>
-                </a>
-                <!-- Postingan 1 -->
-                <a href="postingan/post-atomic-habits.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="sains-populer">
-                    <img src="images/dna-representation-concept.jpg" alt="Ilustrasi konsep DNA" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <span class="text-sm text-blue-600 font-semibold">Sains Populer</span>
-                        <h3 class="text-xl font-bold mt-2 mb-3 text-gray-900">Membedah Konsep DNA dengan Sederhana</h3>
-                        <p class="text-gray-800 mb-4">Mari kita pahami dasar-dasar dari DNA, molekul yang menyimpan semua informasi genetik kita, dengan cara yang mudah.</p>
-                        <div class="flex items-center text-sm text-gray-600">
-                            <i data-feather="calendar" class="w-4 h-4 mr-2"></i>
-                            <span>29 Juli 2025</span>
-                        </div>
-                    </div>
-                </a>
-                 <!-- Postingan 1 -->
-                <a href="postingan/post-atomic-habits.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="sains-populer">
-                    <img src="images/dna-representation-concept.jpg" alt="Ilustrasi konsep DNA" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <span class="text-sm text-blue-600 font-semibold">Sains Populer</span>
-                        <h3 class="text-xl font-bold mt-2 mb-3 text-gray-900">Membedah Konsep DNA dengan Sederhana</h3>
-                        <p class="text-gray-800 mb-4">Mari kita pahami dasar-dasar dari DNA, molekul yang menyimpan semua informasi genetik kita, dengan cara yang mudah.</p>
-                        <div class="flex items-center text-sm text-gray-600">
-                            <i data-feather="calendar" class="w-4 h-4 mr-2"></i>
-                            <span>29 Juli 2025</span>
-                        </div>
-                    </div>
-                </a>
-                <!-- Postingan 2 -->
-                <a href="postingan/post-atomic-habits.html" class="post-card glass-effect block overflow-hidden transition-all duration-300" data-category="review-buku">
-                    <img src="https://placehold.co/600x400/5b21b6/ffffff?text=Atomic+Habits" alt="Sampul buku Atomic Habits" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <span class="text-sm text-purple-600 font-semibold">Review Buku</span>
-                        <h3 class="text-xl font-bold mt-2 mb-3 text-gray-900">Mengapa 'Atomic Habits' Begitu Populer?</h3>
-                        <p class="text-gray-800 mb-4">Buku karya James Clear ini menawarkan pendekatan praktis untuk membangun kebiasaan baik.</p>
+                        <span class="text-sm text-green-600 font-semibold">Membahas Artikel Ilmiah</span>
+                        <h3 class="text-xl font-bold mt-2 mb-3 text-gray-900">DNA Barcoding: Mengungkap Identitas Makhluk Hidup Seperti Memindai Belanjaan</h3>
+                        <p class="text-gray-800 mb-4">Pernahkah Anda berpikir, bagaimana para ilmuwan bisa tahu pasti jenis ikan yang ada di piring sushi Anda, atau membedakan dua spesies kupu-kupu yang terlihat sama persis? Jawabannya ada pada sebuah teknologi canggih yang terinspirasi dari hal yang sangat kita kenal: barcode.</p>
                         <div class="flex items-center text-sm text-gray-600">
                             <i data-feather="calendar" class="w-4 h-4 mr-2"></i>
                             <span>30 Juli 2025</span>
                         </div>
                     </div>
                 </a>
+
             </div>
         </section>
 
@@ -146,7 +95,7 @@
                 <div class="md:w-2/3">
                     <h2 class="text-3xl font-bold text-gray-900 mb-4">Tentang Saya</h2>
                     <p class="text-gray-800 mb-4">
-                        Halo! Saya Muhamad Nawawi, seorang penulis dan pembaca yang bersemangat. Blog ini adalah wadah bagi saya untuk menuangkan ide, hasil perenungan, dan berbagi pengetahuan. Saya percaya bahwa tulisan memiliki kekuatan untuk menginspirasi dan membuka wawasan baru.
+                        Halo! Saya Muhamad Nawawi, seorang pemikir dan pembaca yang bersemangat. Blog ini adalah wadah bagi saya untuk menuangkan ide, hasil perenungan, dan berbagi pengetahuan. Saya percaya bahwa tulisan memiliki kekuatan untuk menginspirasi dan membuka wawasan baru.
                     </p>
                     <p class="text-gray-800">
                         Di sini, Anda akan menemukan berbagai topik, mulai dari ulasan buku favorit saya, pembahasan konsep ilmiah yang menarik, hingga tips produktivitas yang saya terapkan sehari-hari. Selamat membaca!
