--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- Judul Utama -->
         <section class="text-center mb-16">
-            <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Selamat Datang di Ruang Tulis Saya</h1>
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Selamat Datang di Blog Pribadi Saya</h1>
             <p class="text-lg text-gray-800 max-w-2xl mx-auto">Tempat saya berbagi pemikiran, ulasan, dan cerita tentang berbagai topik yang menarik minat saya.</p>
         </section>
 
