--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- Header dengan efek glassmorphism -->
     <header class="glass-effect sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-gray-900">Artemis</a>
+            <a href="Artemis" class="text-2xl font-bold text-gray-900">Artemis</a>
             <nav class="hidden md:flex space-x-8">
-                <a href="index.html" class="text-gray-700 font-semibold hover:text-blue-600 transition duration-300">Home</a>
+                <a href="Artemis" class="text-gray-700 font-semibold hover:text-blue-600 transition duration-300">Home</a>
                 <a href="#about" class="text-gray-700 font-semibold hover:text-blue-600 transition duration-300">Tentang Saya</a>
                 <a href="#contact" class="text-gray-700 font-semibold hover:text-blue-600 transition duration-300">Kontak</a>
             </nav>
@@ -36,7 +36,7 @@
         </div>
         <!-- Menu Mobile -->
         <div id="mobile-menu" class="hidden md:hidden glass-effect">
-            <a href="index.html" class="block py-2 px-6 text-gray-700 hover:bg-white/20">Home</a>
+            <a href="Artemis" class="block py-2 px-6 text-gray-700 hover:bg-white/20">Home</a>
             <a href="#about" class="block py-2 px-6 text-gray-700 hover:bg-white/20">Tentang Saya</a>
             <a href="#contact" class="block py-2 px-6 text-gray-700 hover:bg-white/20">Kontak</a>
         </div>
